--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+   <head>      
+            <title>Grade 8 Topic Help</title>
+      <link rel="icon" type="image/x-icon" href="https://i.imgur.com/nf71qLb.png">
+   </head>
+   
       <meta charset="utf-8">
       <title>Slope</title>
       <link rel="stylesheet" href="css/game.css" type="text/css">
       <meta name="referrer" content="no-referrer">
+      https://i.imgur.com/nf71qLb.png
    </head>
    <body>
       <div class="webgl-content">
